# ProjectVI

./: .gitignore  CMakeLists.txt  README.md  RELATORIO_PARTICIPATING_MEDIA_NOTES.txt  TEAM_MODULE_NOTES.txt  Veach-BRDF.ppm  Veach-Light.ppm  Veach-MIS.ppm
src/: main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Image/: Image.hpp
src/Math/: Random.hpp
src/Medium/: Medium.cpp  Medium.hpp  PhaseFunction.cpp  PhaseFunction.hpp
src/Motion/: README.txt
src/Primitive/Geometry/: Sphere.cpp  Sphere.hpp
src/Ray/: Ray.hpp
src/Renderer/: ProgressiveRenderer.cpp  ProgressiveRenderer.hpp
src/Scene/: GltfSceneBuilder.cpp  Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp
src/Shaders/: DirectIllumination.cpp  DirectIllumination.hpp  PathTracingShader.cpp  PathTracingShader.hpp  VeachShader.cpp  VeachShader.hpp
src/Window/: RenderWindow.cpp  RenderWindow.hpp
